Add ending slash to directory linking

--- a/book/index.html
+++ b/book/index.html
@@ -55,7 +55,7 @@
 </ul>
 <div class="menu menu--no-hero menu--tiny ">
     <div class="menu__page-title">
-        <h1><a href="/book">Serendipity Styx Edition - Das Buch</a></h1>
+        <h1><a href="/book/">Serendipity Styx Edition - Das Buch</a></h1>
     </div>
     <div class="progress-bar" aria-hidden="true"><span class="progress-bar__fill"></span></div>
 </div>
@@ -69,7 +69,7 @@
 <div class="sidebar site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/book" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/book/" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book</a></li>
         </ul>
         <!-- book sb items start -->
         <div id="sidebar" class="sidebar-nav"></div>
@@ -87,18 +87,18 @@
          </ul>
          <ul class="social-links" aria-label="links to styx site pages">Website
           <li><i class="fa fa-star"></i>&nbsp;<a href="/">Styx Home Site</a></li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/blog" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/blog/archives" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/blog/" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/blog/archives/" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
           <li><i class="fa fa-star"></i>&nbsp;<a href="/atom.xml" tabindex="-1" title="Serendipity Styx Blog Feed">Styx Blog Feed</a></li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/about" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/about/" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
           <li>Styx Spartacus</li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/plugins" tabindex="-1" title="Spartacus Styx Plugins">Spartacus Styx Plugins</a></li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/themes" tabindex="-1" title="Spartacus Styx Themes">Spartacus Styx Themes</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/plugins/" tabindex="-1" title="Spartacus Styx Plugins">Spartacus Styx Plugins</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/themes/" tabindex="-1" title="Spartacus Styx Themes">Spartacus Styx Themes</a></li>
          </ul>
          <ul class="social-links" aria-label="links to styx help pages">Help
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/hc" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/hc/en/faq" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
-          <li><i class="fa fa-star"></i>&nbsp;<a href="/contact" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/hc/" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/hc/en/faq/" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
+          <li><i class="fa fa-star"></i>&nbsp;<a href="/contact/" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
          </ul>
         </div>
 
@@ -267,10 +267,10 @@ if (document.readyState == "DOMContentLoaded") {
                     <h2 id="menu-category-1-1">Site &amp; Documentation</h2>
                     <ul class="footer-menu">
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
-                        <li class="icon-site"><a href="/hc/en/faq">Serendipity Styx FAQ</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/hc/en/faq/">Serendipity Styx FAQ</a></li>
                     </ul>
                 </div>
             </div>
@@ -278,9 +278,9 @@ if (document.readyState == "DOMContentLoaded") {
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-2">
                     <h2 id="menu-category-1-2">Connect with Styx</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                     </ul>
                 </div>
             </div>
@@ -301,14 +301,14 @@ if (document.readyState == "DOMContentLoaded") {
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
                     <h2>Connect with Styx</h2>
                     <ul class="footer-mobile__menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
@@ -321,8 +321,8 @@ if (document.readyState == "DOMContentLoaded") {
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
-                    <li class="footer-policy__menu-item"><a href="/legal">Legal</a></li>
-                    <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
                 </ul>
             </div>
