--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -26,7 +26,7 @@
 </ul>
 <div class="menu menu--no-hero menu--tiny ">
     <div class="menu__page-title">
-        <h1><a href="/hc/en/faq">Serendipity Styx Edition - Styx FAQ</a></h1>
+        <h1><a href="/hc/en/faq/">Serendipity Styx Edition - Styx FAQ</a></h1>
     </div>
     <div class="progress-bar" aria-hidden="true"><span class="progress-bar__fill"></span></div>
 </div>
@@ -40,20 +40,20 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/hc/en/faq" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/hc/en/faq/" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
             <li class="site-nav__menu-item"><a href="/" tabindex="-1" title="Serendipity Styx Home">Styx Home</a></li>
-            <li class="site-nav__menu-item"><a href="/blog" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
-            <li class="site-nav__menu-item"><a href="/blog/archives" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/archives/" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
             <li class="site-nav__menu-item"><a href="/atom.xml" tabindex="-1" title="Serendipity Styx Blog Feed">Styx Blog Feed</a></li>
-            <li class="site-nav__menu-item"><a href="/about" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/about/" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
         </ul>
         <p class="site-nav__menu-category">Spartacus</p>
         <ul class="site-nav__menu" aria-label="links to styx spartacus pages">
-            <li class="site-nav__menu-item"><a href="/plugins" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
-            <li class="site-nav__menu-item"><a href="/themes" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
+            <li class="site-nav__menu-item"><a href="/plugins/" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
+            <li class="site-nav__menu-item"><a href="/themes/" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
         </ul>
         <p class="site-nav__menu-category">Repository</p>
         <ul class="site-nav__menu" aria-label="links to styx repository pages">
@@ -64,14 +64,14 @@
         </ul>
         <p class="site-nav__menu-category">Book</p>
         <ul class="site-nav__menu" aria-label="link book page">
-            <li class="site-nav__menu-item"><a href="/book" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
+            <li class="site-nav__menu-item"><a href="/book/" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
         </ul>
         <p class="site-nav__menu-category">Connect & Help</p>
         <ul class="site-nav__menu" aria-label="links connect and help pages">
-            <li class="site-nav__menu-item"><a href="/hc" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
-            <li class="site-nav__menu-item"><a href="/hc/de" tabindex="-1" title="Serendipity Styx Hilfeseiten">Hilfeseiten [de]</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/de/" tabindex="-1" title="Serendipity Styx Hilfeseiten">Hilfeseiten [de]</a></li>
             <li class="site-nav__menu-item"><a href="/hc/en" tabindex="-1" title="Serendipity Styx Help Center">Help center [en]</a></li>
-            <li class="site-nav__menu-item"><a href="/contact" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/contact/" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
         </ul>
     </nav>
 </div>
@@ -83,10 +83,10 @@
                 <div class="blog-post__go-back">
                     <div class="blog-categories__list blog-categories__list--inline blog-categories__list--small">
                         <li class="blog-categories__list-item"><a href="/">Home</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog">Blog</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog/archives">Archives</a></li>
-                        <li class="blog-categories__list-item"><a href="/about">About Styx</a></li>
-                        <li class="blog-categories__list-item"><a href="/book">Styx Book</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/">Blog</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/archives/">Archives</a></li>
+                        <li class="blog-categories__list-item"><a href="/about/">About Styx</a></li>
+                        <li class="blog-categories__list-item"><a href="/book/">Styx Book</a></li>
                         <li class="blog-categories__list-item"><a href="/atom.xml">Feed</a></li>
                     </div>
                 </div>
@@ -482,7 +482,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 <div>
     <p><strong>Spartacus</strong> is the name of the Serendipity Online Plugin Repository, and the name of the corresponding plugin of your Serendipity blog that connects to this repository.</p>
 
-    <p>You can view all the plugins of that repository here <a href="/plugins">Styx additional plugins</a>.</p>
+    <p>You can view all the plugins of that repository here <a href="/plugins/">Styx additional plugins</a>.</p>
 
     <p>Nowadays this plugin is already installed and activated by default.<br>To install the plugin on your Serendipity Installation, follow these instructions:</p>
 
@@ -889,7 +889,7 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
         <div class="blog-post__navigation">
             <div class="blog-post__navigation-inner">
                 <div class="blog-post__navigation-item blog-post__navigation-item--right">
-                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/about">What next?</a>
+                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/about/">What next?</a>
                 </div>
             </div>
         </div>
@@ -915,10 +915,10 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
                     <h2 id="menu-category-1-1">Site & Documentation</h2>
                     <ul class="footer-menu">
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
@@ -926,9 +926,9 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-2">
                     <h2 id="menu-category-1-2">Connect with Styx</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                     </ul>
                 </div>
             </div>
@@ -949,14 +949,14 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
                     <h2>Connect with Styx</h2>
                     <ul class="footer-mobile__menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
@@ -969,8 +969,8 @@ function smarty_function_mydir($params, Smarty_Internal_Template $template) {
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
-                    <li class="footer-policy__menu-item"><a href="/legal">Legal</a></li>
-                    <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
                 </ul>
             </div>
