--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
 </ul>
 <div class="menu menu--no-hero menu--tiny ">
     <div class="menu__page-title">
-        <h1><a href="/about">Serendipity Styx Edition - About Styx</a></h1>
+        <h1><a href="/about/">Serendipity Styx Edition - About Styx</a></h1>
     </div>
     <div class="progress-bar" aria-hidden="true"><span class="progress-bar__fill"></span></div>
 </div>
@@ -40,19 +40,19 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/about" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/about/" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
             <li class="site-nav__menu-item"><a href="/" tabindex="-1" title="Styx Home">Styx Home</a></li>
-            <li class="site-nav__menu-item"><a href="/blog" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
-            <li class="site-nav__menu-item"><a href="/blog/archives" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/archives/" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
             <li class="site-nav__menu-item"><a href="/atom.xml" tabindex="-1" title="Serendipity Styx Blog Feed">Styx Blog Feed</a></li>
         </ul>
         <p class="site-nav__menu-category">Spartacus</p>
         <ul class="site-nav__menu" aria-label="links to styx spartacus pages">
-            <li class="site-nav__menu-item"><a href="/plugins" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
-            <li class="site-nav__menu-item"><a href="/themes" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
+            <li class="site-nav__menu-item"><a href="/plugins/" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
+            <li class="site-nav__menu-item"><a href="/themes/" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
         </ul>
         <p class="site-nav__menu-category">Repository</p>
         <ul class="site-nav__menu" aria-label="links to styx repository pages">
@@ -63,13 +63,13 @@
         </ul>
         <p class="site-nav__menu-category">Book</p>
         <ul class="site-nav__menu" aria-label="link book page">
-            <li class="site-nav__menu-item"><a href="/book" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
+            <li class="site-nav__menu-item"><a href="/book/" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
         </ul>
         <p class="site-nav__menu-category">Connect & Help</p>
         <ul class="site-nav__menu" aria-label="links connect and help pages">
-            <li class="site-nav__menu-item"><a href="/hc" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
-            <li class="site-nav__menu-item"><a href="/hc/en/faq" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
-            <li class="site-nav__menu-item"><a href="/contact" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/en/faq/" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
+            <li class="site-nav__menu-item"><a href="/contact/" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
         </ul>
     </nav>
 </div>
@@ -81,10 +81,10 @@
                 <div class="blog-post__go-back">
                     <div class="blog-categories__list blog-categories__list--inline blog-categories__list--small">
                         <li class="blog-categories__list-item"><a href="/">Home</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog">Blog</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog/archives">Archives</a></li>
-                        <li class="blog-categories__list-item"><a href="/hc/en/faq">Styx FAQ</a></li>
-                        <li class="blog-categories__list-item"><a href="/book">Styx Book</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/">Blog</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/archives/">Archives</a></li>
+                        <li class="blog-categories__list-item"><a href="/hc/en/faq/">Styx FAQ</a></li>
+                        <li class="blog-categories__list-item"><a href="/book/">Styx Book</a></li>
                         <li class="blog-categories__list-item"><a href="/atom.xml">Feed</a></li>
                     </div>
                 </div>
@@ -133,8 +133,8 @@
             plugin is able to work with it - Serendipity is not.</p>
 
             <p>The Serendipity Styx help documentation is found here at the Styx
-            <a href="/hc">Help Center</a> and the <strong>Frequently Asked Questions</strong>
-            <a href="/hc/en/faq">FAQ</a> page at here. You are requested to read all about
+            <a href="/hc/">Help Center</a> and the <strong>Frequently Asked Questions</strong>
+            <a href="/hc/en/faq/">FAQ</a> page at here. You are requested to read all about
             it there, if the Book has left over some questions, or you need some quick advice.
             Some important changes between the two Serendipity editions will have to be added to the Styx Wiki or this page sooner or
             later, I assume, but have already been ported to the <a href="/book/">Styx Book</a>.</p>
@@ -175,7 +175,7 @@
         <div class="blog-post__navigation">
             <div class="blog-post__navigation-inner">
                 <div class="blog-post__navigation-item blog-post__navigation-item--right">
-                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/blog">What next?</a>
+                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/blog/">What next?</a>
                 </div>
             </div>
         </div>
@@ -201,11 +201,11 @@
                     <h2 id="menu-category-1-1">Site & Documentation</h2>
                     <ul class="footer-menu">
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
-                        <li class="icon-site"><a href="/hc/en/faq">Serendipity Styx FAQ</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/hc/en/faq/">Serendipity Styx FAQ</a></li>
                     </ul>
                 </div>
             </div>
@@ -213,8 +213,8 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-2">
                     <h2 id="menu-category-1-2">Connect with Styx</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
                     </ul>
                 </div>
             </div>
@@ -235,13 +235,13 @@
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
                     <h2>Connect with Styx</h2>
                     <ul class="footer-mobile__menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
@@ -254,8 +254,8 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
-                    <li class="footer-policy__menu-item"><a href="/legal">Legal</a></li>
-                    <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
                 </ul>
             </div>
