--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
 </ul>
 <div class="menu menu--no-hero menu--tiny ">
     <div class="menu__page-title">
-        <h1><a href="/plugins">Serendipity Styx Edition - Contact Styx</a></h1>
+        <h1><a href="/plugins/">Serendipity Styx Edition - Contact Styx</a></h1>
     </div>
     <div class="progress-bar" aria-hidden="true"><span class="progress-bar__fill"></span></div>
 </div>
@@ -40,20 +40,20 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/contact" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/contact/" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
             <li class="site-nav__menu-item"><a href="/" tabindex="-1" title="Serendipity Styx Home">Styx Home</a></li>
-            <li class="site-nav__menu-item"><a href="/blog" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
-            <li class="site-nav__menu-item"><a href="/blog/archives" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/archives/" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
             <li class="site-nav__menu-item"><a href="/atom.xml" tabindex="-1" title="Serendipity Styx Blog Feed">Styx Blog Feed</a></li>
-            <li class="site-nav__menu-item"><a href="/about" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/about/" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
         </ul>
         <p class="site-nav__menu-category">Spartacus</p>
         <ul class="site-nav__menu" aria-label="links to styx spartacus pages">
-            <li class="site-nav__menu-item"><a href="/plugins" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
-            <li class="site-nav__menu-item"><a href="/themes" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
+            <li class="site-nav__menu-item"><a href="/plugins/" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
+            <li class="site-nav__menu-item"><a href="/themes/" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
         </ul>
         <p class="site-nav__menu-category">Repository</p>
         <ul class="site-nav__menu" aria-label="links to styx repository pages">
@@ -64,13 +64,13 @@
         </ul>
         <p class="site-nav__menu-category">Book</p>
         <ul class="site-nav__menu" aria-label="link book page">
-            <li class="site-nav__menu-item"><a href="/book" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
+            <li class="site-nav__menu-item"><a href="/book/" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
         </ul>
         <p class="site-nav__menu-category">Connect & Help</p>
         <ul class="site-nav__menu" aria-label="links connect and help pages">
-            <li class="site-nav__menu-item"><a href="/hc" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
-            <li class="site-nav__menu-item"><a href="/hc/en/faq" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
-            <li class="site-nav__menu-item"><a href="/contact" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/en/faq/" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
+            <li class="site-nav__menu-item"><a href="/contact/" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
         </ul>
     </nav>
 </div>
@@ -82,11 +82,11 @@
                 <div class="blog-post__go-back">
                     <div class="blog-categories__list blog-categories__list--inline blog-categories__list--small">
                         <li class="blog-categories__list-item"><a href="/">Home</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog">Blog</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog/archives">Archives</a></li>
-                        <li class="blog-categories__list-item"><a href="/about">About Styx</a></li>
-                        <li class="blog-categories__list-item"><a href="/hc/en/faq">Styx FAQ</a></li>
-                        <li class="blog-categories__list-item"><a href="/book">Styx Book</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/">Blog</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/archives/">Archives</a></li>
+                        <li class="blog-categories__list-item"><a href="/about/">About Styx</a></li>
+                        <li class="blog-categories__list-item"><a href="/hc/en/faq/">Styx FAQ</a></li>
+                        <li class="blog-categories__list-item"><a href="/book/">Styx Book</a></li>
                         <li class="blog-categories__list-item"><a href="/atom.xml">Feed</a></li>
                     </div>
                 </div>
@@ -156,11 +156,11 @@
                     <h2 id="menu-category-1-1">Site & Documentation</h2>
                     <ul class="footer-menu">
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
-                        <li class="icon-site"><a href="/hc/en/faq">Serendipity Styx FAQ</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/hc/en/faq/">Serendipity Styx FAQ</a></li>
                     </ul>
                 </div>
             </div>
@@ -168,8 +168,8 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-2">
                     <h2 id="menu-category-1-2">Connect with Styx</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                     </ul>
                 </div>
             </div>
@@ -190,13 +190,13 @@
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
                     <h2>Connect with Styx</h2>
                     <ul class="footer-mobile__menu">
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                         <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
@@ -209,8 +209,8 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
-                    <li class="footer-policy__menu-item"><a href="/legal">Legal</a></li>
-                    <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank">Open Source</a></li>
                 </ul>
             </div>
