--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
-            <li class="site-nav__menu-item"><a href="/blog" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
-            <li class="site-nav__menu-item"><a href="/blog/archives" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/" tabindex="-1" title="Serendipity Styx Blog">Styx Blog</a></li>
+            <li class="site-nav__menu-item"><a href="/blog/archives/" tabindex="-1" title="Serendipity Styx Blog Archives">Styx Blog Archives</a></li>
             <li class="site-nav__menu-item"><a href="/atom.xml" tabindex="-1" title="Serendipity Styx Blog Feed">Styx Blog Feed</a></li>
-            <li class="site-nav__menu-item"><a href="/about" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/about/" tabindex="-1" title="About Serendipity Styx">About Styx</a></li>
         </ul>
         <p class="site-nav__menu-category">Spartacus</p>
         <ul class="site-nav__menu" aria-label="links to styx spartacus pages">
-            <li class="site-nav__menu-item"><a href="/plugins" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
-            <li class="site-nav__menu-item"><a href="/themes" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
+            <li class="site-nav__menu-item"><a href="/plugins/" tabindex="-1" title="Serendipity Styx Spartacus Plugins">Styx Spartacus Plugins</a></li>
+            <li class="site-nav__menu-item"><a href="/themes/" tabindex="-1" title="Serendipity Styx Spartacus Themes">Styx Spartacus Themes</a></li>
         </ul>
         <p class="site-nav__menu-category">Repository</p>
         <ul class="site-nav__menu" aria-label="links to styx repository pages">
@@ -63,13 +63,13 @@
         </ul>
         <p class="site-nav__menu-category">Book</p>
         <ul class="site-nav__menu" aria-label="link book page">
-            <li class="site-nav__menu-item"><a href="/book" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
+            <li class="site-nav__menu-item"><a href="/book/" tabindex="-1" title="Documentation Serendipity Styx Book [de] page">Styx Book [de]</a></li>
         </ul>
         <p class="site-nav__menu-category">Connect & Help</p>
         <ul class="site-nav__menu" aria-label="links connect and help pages">
-            <li class="site-nav__menu-item"><a href="/hc" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
-            <li class="site-nav__menu-item"><a href="/hc/en/faq" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
-            <li class="site-nav__menu-item"><a href="/contact" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/" tabindex="-1" title="Serendipity Styx Help Center">Help center</a></li>
+            <li class="site-nav__menu-item"><a href="/hc/en/faq/" tabindex="-1" title="Serendipity Styx FAQ">Styx FAQ</a></li>
+            <li class="site-nav__menu-item"><a href="/contact/" tabindex="-1" title="Serendipity Styx Contact">Contact Styx</a></li>
         </ul>
     </nav>
 </div>
@@ -80,11 +80,11 @@
             <div class="blog-post__content-header">
                 <div class="blog-post__go-back">
                     <div class="blog-categories__list blog-categories__list--inline blog-categories__list--small">
-                        <li class="blog-categories__list-item"><a href="/blog">Blog</a></li>
-                        <li class="blog-categories__list-item"><a href="/blog/archives">Archives</a></li>
-                        <li class="blog-categories__list-item"><a href="/about">About Styx</a></li>
-                        <li class="blog-categories__list-item"><a href="/hc/en/faq">Styx FAQ</a></li>
-                        <li class="blog-categories__list-item"><a href="/book">Styx Book</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/">Blog</a></li>
+                        <li class="blog-categories__list-item"><a href="/blog/archives/">Archives</a></li>
+                        <li class="blog-categories__list-item"><a href="/about/">About Styx</a></li>
+                        <li class="blog-categories__list-item"><a href="/hc/en/faq/">Styx FAQ</a></li>
+                        <li class="blog-categories__list-item"><a href="/book/">Styx Book</a></li>
                         <li class="blog-categories__list-item"><a href="/atom.xml">Feed</a></li>
                     </div>
                 </div>
@@ -94,13 +94,13 @@
                     <span class="author">&nbsp;by&nbsp;<span class="author-name">Ian Styx</span></span>
                 </div>
                <figure id="slides" class="welcome">
-                    <span class="slide showing"><img src="i/c/frontend-2k11.400.jpg" alt=""></span>
-                    <span class="slide"><img src="i/c/login.400.jpg" alt=""></span>
-                    <span class="slide"><img src="i/c/backend-dash.400.jpg" alt=""></span>
-                    <span class="slide"><img src="i/c/backend.400.jpg" alt=""></span>
-                    <span class="slide"><img src="i/c/welcome-styx.400.jpg" alt=""></span>
-                    <span class="slide"><img src="i/c/maintain.400.jpg" alt=""></span>
-                    <span class="slide"><img src="i/c/frontend-next.400.jpg" alt=""></span>
+                    <span class="slide showing"><img src="/i/c/frontend-2k11.400.jpg" alt=""></span>
+                    <span class="slide"><img src="/i/c/login.400.jpg" alt=""></span>
+                    <span class="slide"><img src="/i/c/backend-dash.400.jpg" alt=""></span>
+                    <span class="slide"><img src="/i/c/backend.400.jpg" alt=""></span>
+                    <span class="slide"><img src="/i/c/welcome-styx.400.jpg" alt=""></span>
+                    <span class="slide"><img src="/i/c/maintain.400.jpg" alt=""></span>
+                    <span class="slide"><img src="/i/c/frontend-next.400.jpg" alt=""></span>
                 </figure>
             </div>
         </div>
@@ -114,7 +114,7 @@
 
             <p><a href="https://github.com/ophian/styx">Styx</a> is what <strong>Serendipity</strong> should be!</p>
 
-            <p>You can read all <a href="/about">about Styx</a> and Serendipity here.</p>
+            <p>You can read all <a href="/about/">about Styx</a> and Serendipity here.</p>
 
             <hr>
 
@@ -146,7 +146,7 @@
             <hr>
 
             <p>For the Quicks and as a starter, you may just read the Serendipity Styx <em>Frequently Asked Questions</em> <strong>FAQ</strong> page
-            <a href="/hc/en/faq">here</a> and then return reading about the Serendipity history.</p>
+            <a href="/hc/en/faq/">here</a> and then return reading about the Serendipity history.</p>
             
             <hr>
 
@@ -209,7 +209,7 @@
         <div class="blog-post__navigation">
             <div class="blog-post__navigation-inner">
                 <div class="blog-post__navigation-item blog-post__navigation-item--right">
-                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/about">What next?</a>
+                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/about/">What next?</a>
                 </div>
             </div>
         </div>
@@ -234,11 +234,11 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-1">
                     <h2 id="menu-category-1-1">Site & Documentation</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
-                        <li class="icon-site"><a href="/hc/en/faq">Serendipity Styx FAQ</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/hc/en/faq/">Serendipity Styx FAQ</a></li>
                     </ul>
                 </div>
             </div>
@@ -246,9 +246,9 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-2">
                     <h2 id="menu-category-1-2">Connect with Styx</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
                     </ul>
                 </div>
             </div>
@@ -269,13 +269,13 @@
                 <div class="col-xs-12 col-sm-6 footer-mobile__column">
                     <h2>Connect with Styx</h2>
                     <ul class="footer-mobile__menu">
-                        <li class="icon-site"><a href="/contact">Contact us</a></li>
-                        <li class="icon-site"><a href="/hc">Help center</a></li>
-                        <li class="icon-site"><a href="/about">About Styx</a></li>
-                        <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
-                        <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
-                        <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
-                        <li class="icon-site"><a href="/themes">Serendipity Styx Themes</a></li>
+                        <li class="icon-site"><a href="/contact/">Contact us</a></li>
+                        <li class="icon-site"><a href="/hc/">Help center</a></li>
+                        <li class="icon-site"><a href="/about/">About Styx</a></li>
+                        <li class="icon-site"><a href="/blog/">Serendipity Styx Blog</a></li>
+                        <li class="icon-site"><a href="/book/">Serendipity Styx Book [de]</a></li>
+                        <li class="icon-site"><a href="/plugins/">Serendipity Styx Plugins</a></li>
+                        <li class="icon-site"><a href="/themes/">Serendipity Styx Themes</a></li>
                     </ul>
                 </div>
             </div>
@@ -288,8 +288,8 @@
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
-                    <li class="footer-policy__menu-item"><a href="/legal">Legal</a></li>
-                    <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php">Proud to be Open Source</a></li>
                 </ul>
             </div>
