hc: primers - More for 8052321 - internal referencing

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -202,7 +202,7 @@ print_r($entries);
 
 <h4 id="docs-htaccess">.htaccess</h4>
 
-<p>This file holds simple, central mod_rewrite RewriteRules (when URL-Rewriting is enabled) to match all permalink patters back to index.php (see the “Routing”-parts below).</p>
+<p>This file holds simple, central mod_rewrite RewriteRules (when URL-Rewriting is enabled) to match all permalink patters back to index.php (see the “Routing”-<a href="#docs-frontend-routing-indexphp">parts</a> (<a href="#docs-backend-routing-serendipity_adminphp">ff</a>) below).</p>
 
 <h4 id="docs-serendipitycssphp">serendipity.css.php</h4>
 
@@ -523,7 +523,7 @@ print_r($entries);
 
 <p>You can overwrite such an errorhandler in your “serendipity_config_local.inc.php” file by implementing your own function.</p>
 
-<h3 id="docs-frontend-routing-indexphp">Frontend-Routing: index.php</h3>
+<h3 id="docs-frontend-routing-indexphp">Frontend-Routing: “index.php”</h3>
 
 <p>All of our Frontend routing is performed through the “index.php” file. Its code flow is like this:</p>
 
