--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -125,7 +125,7 @@
                           <li><span class="var">serendipity_fetchComments</span>: Fetch an array of comments to a specific entry id</li>
                           <li><span class="var">serendipity_generateCommentList</span>: Create a HTML SELECT dropdown field which represents all hierarchical comments</li>
                           <li><span class="var">serendipity_printComments</span>: Print a list of comments to an entry</li>
-                          <li><span class="var"><serendipity_insertComment/span>, <span class="var">serendipity_saveComment</span>: Store the comment made by a visitor in the database</li>
+                          <li><span class="var">serendipity_insertComment</span>, <span class="var">serendipity_saveComment</span>: Store the comment made by a visitor in the database</li>
                           <li><span class="var">serendipity_sendComment</span>: Send a comment notice to the admin/author of an entry</li>
                         </ul>
                       </li>
